# weft

./: .cursorrules  .editorconfig  .gitignore  .markdownlintignore  AGENTS.md  CHANGELOG.md  CLA-SIGNATURE-TEST.md  CLA.en.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Directory.Build.props  GEMINI.md  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  STRAYMARK.md  THIRD-PARTY-NOTICES.md  Weft.sln  weft-design-brief.md
.agent/workflows/: straymark-adr.md  straymark-aidec.md  straymark-ailog.md  straymark-architecture-sync.md  straymark-architecture.md  straymark-audit-execute.md  straymark-audit-prompt.md  straymark-audit-review.md  straymark-charter-new.md  straymark-followups.md  straymark-loom.md  straymark-mcard.md  straymark-new.md  straymark-sec.md  straymark-status.md
.cursor/rules/: straymark.md
.github/: copilot-instructions.md
.github/scripts/: check-test-filters.sh
.github/workflows/: ci.yml  cla.yml  docs-validation.yml  release.yml
.specify/: feature.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
.straymark/: .checksums.json  QUICK-REFERENCE.md  config.yml  dist-manifest.yml  follow-ups-backlog.md
.straymark/00-governance/: AGENT-RULES.md  AI-GOVERNANCE-POLICY.md  AI-KPIS.md  AI-LIFECYCLE-TRACKER.md  AI-RISK-CATALOG.md  C4-DIAGRAM-GUIDE.md  CAC-FILING-GUIDE.md  CHARTER-CHAIN-EVOLUTION.md  CHINA-REGULATORY-FRAMEWORK.md  DOCUMENTATION-POLICY.md  EMERGENT-OBSERVATION-DESIGN.md  FOLLOW-UPS-BACKLOG-PATTERN.md  GB-45438-LABELING-GUIDE.md  GIT-BRANCHING-STRATEGY.md  ISO-25010-2023-REFERENCE.md  MANAGEMENT-REVIEW-TEMPLATE.md  OBSERVABILITY-GUIDE.md  PIPL-PIPIA-GUIDE.md  POLISH-CHARTER-PATTERN.md  PRINCIPLES.md  QUICK-REFERENCE.md  SPECKIT-CHARTER-BRIDGE.md  TC260-IMPLEMENTATION-GUIDE.md
.straymark/03-implementation/: NIST-AI-600-1-GENAI-RISKS.md  NIST-AI-RMF-GOVERN-GUIDE.md  NIST-AI-RMF-MANAGE-GUIDE.md  NIST-AI-RMF-MAP-GUIDE.md  NIST-AI-RMF-MEASURE-GUIDE.md
.straymark/architecture/: model.yml  plan.drawio
.straymark/audit-prompts/: audit-prompt.md
.straymark/charters/: 01-ffi-core-foundation.md  02-versioning-dual-engine.md  03-concurrencia-broker-actor-canal-y-ciclo-de-vida-a.md  04-server-foundation-codec-stores.md  05-weft-server-relay-end-to-end-cierra-m2-us3.md  06-adaptadores-de-persistencia-externos-ef-core-redis.md  07-release-ready-multiplataforma-nuget-nativo-multi.md  08-endurecer-decoder-yrs-r6.md  09-client-id-determinista-en-el-ffi-de-yrs-gate-de.md  10-superficie-inativeversioning-de-loro-probes.md  11-polish-cierre-m3.md  12-cerrar-declaracion-sin-cableado.md  13-siembra-cross-engine.md  14-durabilidad-relay.md  CHARTER-01.telemetry.yaml  CHARTER-02.telemetry.yaml  CHARTER-03.telemetry.yaml  CHARTER-04.telemetry.yaml  CHARTER-05.telemetry.yaml  CHARTER-06.telemetry.yaml  CHARTER-07.telemetry.yaml  CHARTER-08.telemetry.yaml  CHARTER-09.telemetry.yaml  CHARTER-10.telemetry.yaml  CHARTER-12.telemetry.yaml  CHARTER-13.telemetry.yaml  CHARTER-14.telemetry.yaml
.straymark/hooks/: pre-pr.sh
.straymark/schemas/: audit-output.schema.v0.json  charter-telemetry.schema.v0.json  charter.schema.v0.json  follow-ups-backlog.schema.v1.json
.straymark/scripts/: check-charter-drift.sh
.straymark/templates/: TEMPLATE-ADR.md  TEMPLATE-AIDEC.md  TEMPLATE-AILABEL.md  TEMPLATE-AILOG.md  TEMPLATE-CACFILE.md  TEMPLATE-DPIA.md  TEMPLATE-ETH.md  TEMPLATE-INC.md  TEMPLATE-MCARD.md  (+8 more)
docs/: RELEASING.md  architecture.md
native/: Cargo.toml  about.hbs  about.toml  rust-toolchain.toml
native/weft-loro-ffi/: Cargo.toml
native/weft-loro-ffi/fuzz/: Cargo.toml
native/weft-loro-ffi/fuzz/fuzz_targets/: loro_apply_update.rs  loro_doc_load.rs
native/weft-loro-ffi/include/: weft_loro_ffi.h
native/weft-loro-ffi/src/: lib.rs
native/weft-loro-ffi/tests/: mem_asan.rs
native/weft-yrs-ffi/: Cargo.toml
native/weft-yrs-ffi/fuzz/: Cargo.toml
native/weft-yrs-ffi/fuzz/fuzz_targets/: apply_update.rs  doc_load.rs  export_since.rs
native/weft-yrs-ffi/include/: weft_ffi.h
native/weft-yrs-ffi/src/: lib.rs
native/weft-yrs-ffi/tests/: mem_asan.rs
samples/: README.md
(+304 files in other folders)
