# Workspace Rust de Weft: shims C-ABI consumidos por los paquetes .NET vía P/Invoke.
# En M0 solo el shim de yrs; weft-loro-ffi entra en CHARTER-02 (US5).
[workspace]
resolver = "2"
members = ["weft-yrs-ffi", "weft-loro-ffi"]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/StrangeDaysTech/weft"

[profile.release]
# Símbolos útiles para inspeccionar el cdylib y para los sanitizers (ASan/LSan).
debug = 1
