[package]
name = "weft-loro-ffi-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
loro = "=1.13.6"

[dependencies.weft-loro-ffi]
path = ".."

[[bin]]
name = "loro_doc_load"
path = "fuzz_targets/loro_doc_load.rs"
test = false
doc = false
bench = false

[[bin]]
name = "loro_apply_update"
path = "fuzz_targets/loro_apply_update.rs"
test = false
doc = false
bench = false

[profile.release]
panic = "unwind"

[workspace]
